load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "gpu",
    srcs = glob(
        ["**"],
        exclude = [
            "BUILD.bazel",
            "**/*.bzl",
            "**/*.mk",
            "**/*.bp",
        ],
    ),
    outs = [
        "mali_kbase.ko",
    ],
    kernel_build = "//common:amlogic",
    visibility = [
        "//common:__pkg__",
    ],
)
